tests/org.eclipse.php.core.tests/workspace/errors/php54/testTypeReferenceError6.pdtt
--TEST--
Bug 549197 - Validator gets confused when a class alias matches the same name as a used trait
--FILE--
<?php
use stdClass as StuffMaker4;

class AStuffMaker4 implements IStuffMaker4
{
    use \Traits4\StuffMaker4;
}
?>
--FILE0--
<?php
interface IStuffMaker4
{
    public function makeStuff();
}
?>
--FILE1--
<?php
namespace Traits4;

trait StuffMaker4
{
    public function makeStuff()
    {
        //code
    }
}
?>
--EXPECT--
[line=2, start=10, end=18] The import stdClass is never used